fix: share and search dialog in dark mode (#11186)
This fixes the share dialog in dark mode, and also an issue with the
search bar in light terminal + dark mode.

--- a/app/terminal/terminal.css
+++ b/app/terminal/terminal.css
@@ -36,6 +36,11 @@
   border-radius: 8px;
 }
 
+.terminal.light-terminal .terminal-search-input {
+  background: var(--color-white);
+  color: var(--color-black);
+}
+
 .terminal .terminal-text {
   height: 400px;
   overflow: visible;
